Alterando OpenAPI